# mcp-read-only-grafana

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  connections.schema.json  connections.yaml.sample  justfile  pyproject.toml  secrets.env.example
.github/workflows/: publish.yml  test.yml
scripts/: get-current-user.sh
src/: config.py  exceptions.py  grafana_connector.py  runtime_paths.py  server.py  types.py
src/mcp_read_only_grafana/: __init__.py  config.py  exceptions.py  grafana_connector.py  runtime_paths.py  server.py  validation.py
src/mcp_read_only_grafana/tools/: __init__.py  admin_tools.py  alert_tools.py  core_tools.py  dashboard_tools.py  datasource_tools.py  test_connection.py  user_tools.py  validate_config.py
src/tools/: admin_tools.py  alert_tools.py  core_tools.py  dashboard_tools.py  datasource_tools.py  test_connection.py  user_tools.py  validate_config.py
tests/: test_alert_endpoints.py  test_alert_provenance.py  test_alert_provisioning.py  test_config.py  test_connections_reload.py  test_cookie_refresh.py  test_create_folder.py  test_explore_query.py  test_http_methods.py  test_integration_all_endpoints.py  test_pagination_fields.py  test_runtime_paths.py  test_save_dashboard.py  test_server.py  test_tool_friendly_responses.py  test_user_endpoint.py
