[project]
name = "mcp-read-only-grafana"
version = "0.2.1"
description = "MCP server for Grafana with a read-only default and a separate write-capable command"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["grafana", "mcp", "mcp-server", "read-only", "observability"]
authors = [
    {name = "Lukas Lehner", email = "lehner.lukas@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lukleh/mcp-read-only-grafana"
Repository = "https://github.com/lukleh/mcp-read-only-grafana"
Issues = "https://github.com/lukleh/mcp-read-only-grafana/issues"
Changelog = "https://github.com/lukleh/mcp-read-only-grafana/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.28",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-read-only-grafana = "mcp_read_only_grafana.server:main_read_only"
mcp-grafana-write = "mcp_read_only_grafana.server:main_write"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_read_only_grafana"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require live Grafana instance)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.vulture]
paths = ["src", "tests"]
exclude = [".venv", "venv", "build", "dist", "node_modules", "__pycache__", "site-packages"]
ignore_decorators = ["@*.tool*", "@pytest.fixture", "@field_validator", "@model_validator", "@validator"]
ignore_names = ["model_config", "pytest_*"]
min_confidence = 80

[tool.ty.src]
include = ["src"]
